refactored the style of the register page.

--- a/src/main/resources/static/css/buttonStylesheet.css
+++ b/src/main/resources/static/css/buttonStylesheet.css
@@ -9,10 +9,12 @@ Hero Introduction
 */
 /*Index*/
 /*Navbar*/
+/*Register Page - Submit Button*/
 main #hero-introduction .container #section-one aside .get-started-button,
 main #hero-introduction .container #section-one aside .login-button,
 #loggedOutNavbar .container #navbarNavAltMarkup .navbar-nav .nav-log-in,
-#loggedOutNavbar .container #navbarNavAltMarkup .navbar-nav .nav-get-started-btn{
+#loggedOutNavbar .container #navbarNavAltMarkup .navbar-nav .nav-get-started-btn,
+#mainRegisterPage #registerForm #register-submit-btn{
     background-color: #13aa52;
     border: 1px solid #13aa52;
     border-radius: 4px;
@@ -44,10 +46,12 @@ Hero Introduction
 
 /*Index*/
 /*Navbar*/
+/*Register Page - Submit Button*/
 main #hero-introduction .container #section-one aside .get-started-button:hover,
 main #hero-introduction .container #section-one aside .login-button:hover,
 #loggedOutNavbar .container #navbarNavAltMarkup .navbar-nav .nav-log-in:hover,
-#loggedOutNavbar .container #navbarNavAltMarkup .navbar-nav .nav-get-started-btn:hover{
+#loggedOutNavbar .container #navbarNavAltMarkup .navbar-nav .nav-get-started-btn:hover,
+#mainRegisterPage #registerForm #register-submit-btn:hover{
     background-color: #0e8641;
     border: 1px solid #0e8641;
     transform: translateY(-2px);
@@ -62,8 +66,11 @@ main #hero-introduction .container #section-one aside .login-button:hover,
 /* Login Button Color Change*/
 /*Index*/
 /*Navbar*/
+/*Register Page - Submit Button*/
 main #hero-introduction .container #section-one aside .login-button,
-#loggedOutNavbar .container #navbarNavAltMarkup .navbar-nav .nav-log-in{
+#loggedOutNavbar .container #navbarNavAltMarkup .navbar-nav .nav-log-in,
+#mainRegisterPage #registerForm #register-submit-btn{
+
     background-color: #5b8ed5;
     border: 1px solid #5b8ed5;
 }
@@ -71,8 +78,10 @@ main #hero-introduction .container #section-one aside .login-button,
 /*Login Button - HOVER*/
 /*Index*/
 /*Navbar*/
+/*Register Page - Submit Button*/
 main #hero-introduction .container #section-one aside .login-button:hover,
-#loggedOutNavbar .container #navbarNavAltMarkup .navbar-nav .nav-log-in:hover{
+#loggedOutNavbar .container #navbarNavAltMarkup .navbar-nav .nav-log-in:hover,
+#mainRegisterPage #registerForm #register-submit-btn:hover{
     background-color: rgba(100, 149, 237, 0.49);
     border: 1px solid rgba(100, 149, 237, 0.49);
 }
