--- a/src/main/resources/static/css/indexStylesheet.css
+++ b/src/main/resources/static/css/indexStylesheet.css
@@ -7,6 +7,8 @@
 @import "navbarFooterStylesheet.css";
 /*About Page*/
 @import "aboutStylesheet.css";
+/*Register & Login Page*/
+@import "signinStylesheet.css";
 
 
 
