took out an un wanted border

--- a/src/main/resources/templates/base/about.html
+++ b/src/main/resources/templates/base/about.html
@@ -10,7 +10,7 @@
 
 <!-- Hero Introduction -->
 <header id="hero-aboutPage">
-    <section>
+    <section class="container">
       <h1>About Bookworm</h1>
       <h2>Learn what all you can do with Bookworm</h2>
     </section>
