--- a/src/main/resources/static/css/aboutStylesheet.css
+++ b/src/main/resources/static/css/aboutStylesheet.css
@@ -86,6 +86,7 @@ main {
                 display: flex;
                 max-width: 820px;
                 margin: 0 auto;
+                padding-bottom: 42px;
                 gap: 20px;
                 transition: all 0.4s ease-in-out;
                 @media (max-width:575px) {
