--- a/src/main/resources/templates/base/index.html
+++ b/src/main/resources/templates/base/index.html
@@ -8,8 +8,10 @@
 <!-- Navigation -->
 <nav th:replace="partials/navbar.html :: Navbar"></nav>
 
+
+
 <!-- Main Section -->
-<main>
+<main id="mainIndexPage">
     <!------ Hero Introduction ------>
     <div id="hero-introduction">
         <div class="container">
@@ -80,6 +82,8 @@
         </div>
     </div>
 </main>
+
+
 
 <!-- Footer -->
 <footer th:replace="partials/footer.html :: Footer"></footer>
