--- a/src/main/resources/templates/SignUp/login.html
+++ b/src/main/resources/templates/SignUp/login.html
@@ -8,64 +8,71 @@
 <!===== Navbar =====>
 <nav th:replace="partials/navbar.html :: Navbar"></nav>
 
+<main id="main-login">
+    <div class="container">
 
 
-<!===== Main Login Section =====>
-<main id="login-section">
-    <!==== Container ====>
-    <div class="container whole-container">
-        <!==== Login Card ====>
-        <div class="col col-md-12 col-lg-10 card">
-            <!==== Separates sides ====>
-            <div class="row g-0">
-                <!==== IMG Container ====>
-                <header class="col-md-6 col-lg-5 d-none d-md-block">
-                    <!==== Image ====>
-                    <img src="/img/couch.jpg" alt="Login Books" id="login-img" />
-                </header>
-                <!==== Context Container ====>
-                <section class="col-md-6 col-lg-7 d-flex align-items-center">
-                    <!==== Right Side of Card ====>
-                    <div class="card-body p-4 p-lg-5">
-                        <!==== Form ====>
-                        <form class="text-black" autocomplete="off">
-                            <!== icon and logo ===>
-                            <section class="d-flex align-items-center mb-3 pb-1">
-                                <img th:src="@{img/bookworm.png}" th:height="*{120}" alt="logo" class="me-3"/>
-                                <h3 class=" fw-bold mb-0">Sign in to your account</h3>
-                            </section>
-                            <!==== User Email ====>
-                            <section class="form-outline mb-2">
-                                <input type="text" id="username" class="form-control" required/>
-                                <label class="form-label" for="username">Username:</label>
-                            </section>
-                            <!==== User Password ====>
-                            <section class="form-outline mb-2">
-                                <input type="password" id="userPassword" class="form-control" required/>
-                                <aside class="d-flex">
-                                    <label class="form-label" for="userPassword">Password</label>
-                                    <!==== Forgot Password ====>
-                                    <a class="small text-muted ms-auto" th:href="@{/forgot_password}">Forgot password?</a>
-                                </aside>
-                            </section>
-                            <!==== Form Container - Submit Button ====>
-                            <div class="pt-1 mb-2">
-                                <button type="submit" id="login-form-submit-btn" class="btn btn-primary mt-4 mb-2">Submit</button>
-                            </div>
-                            <!==== Register Here ====>
-                            <p class=" text-center mt-5" style="color: #393f81">
-                                Don't have an account?
-                                <a th:href="@{/sign-up}" style="color:#393f81;">
-                                    Register here
-                                </a>
-                            </p>
-                        </form>
-                    </div>
-                </section>
-            </div>
+        <!-- Login Card -->
+        <div id="loginCard">
+            <!--Left Side containing Image-->
+            <section id="login-section-one" class="d-none d-md-block">
+                <img src="/img/couch.jpg" alt="Login Books" id="login-img" />
+            </section>
+            <!-- Right Side containing form-->
+            <section id="login-section-two">
+
+                    <form id="login-form" autocomplete="off">
+                        <!--- icon and logo --->
+                        <header class="">
+                            <img th:src="@{img/bookworm.png}" alt="logo" class="me-3"/>
+                            <h3 class=" fw-bold mb-0">Sign in to your account</h3>
+                        </header>
+                        <!-- User Email -->
+                        <section class="form-outline mb-2">
+                            <input type="text" id="username" class="form-control" required/>
+                            <label class="form-label" for="username">Username:</label>
+                        </section>
+                        <!--- User Password --->
+                        <section class="form-outline mb-2">
+                            <input type="password" id="userPassword" class="form-control" required/>
+                            <aside class="d-flex">
+                                <label class="form-label" for="userPassword">Password</label>
+                                <!--- Forgot Password --->
+                                <a class="small text-muted ms-auto" th:href="@{/forgot_password}">Forgot password?</a>
+                            </aside>
+                        </section>
+                        <!-- Submit Button -->
+                        <button type="submit" id="login-form-submit-btn" class="btn btn-primary mt-4 mb-2">Submit</button>
+                        <!--- Register Here -->
+                        <p class=" text-center mt-5" style="color: #37517e">
+                            Don't have an account?
+                            <a th:href="@{/sign-up}" style="color:#37517e;">
+                                Register here
+                            </a>
+                        </p>
+                    </form>
+
+            </section>
+
         </div>
+
     </div>
 </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
