--- a/src/main/resources/static/css/buttonStylesheet.css
+++ b/src/main/resources/static/css/buttonStylesheet.css
@@ -11,12 +11,14 @@ Hero Introduction
 /*Navbar*/
 /*Register Page - Submit Button*/
 /*Login Page - Submit Button*/
+/*ForgotPassword - Submit Button*/
 main #hero-introduction .container #section-one aside .get-started-button,
 main #hero-introduction .container #section-one aside .login-button,
 #loggedOutNavbar .container #navbarNavAltMarkup .navbar-nav .nav-log-in,
 #loggedOutNavbar .container #navbarNavAltMarkup .navbar-nav .nav-get-started-btn,
 #mainRegisterPage #registerForm #register-submit-btn,
-#main-login .container #loginCard #login-section-two #login-form #login-form-submit-btn{
+#main-login .container #loginCard #login-section-two #login-form #login-form-submit-btn,
+#forgotPasswordMain .container #forgotPasswordForm #forgotPassword-submit-btn{
     background-color: #13aa52;
     border: 1px solid #13aa52;
     border-radius: 4px;
@@ -50,13 +52,14 @@ Hero Introduction
 /*Navbar*/
 /*Register Page - Submit Button*/
 /*Login Page - Submit Button*/
+/*ForgotPassword - Submit Button*/
 main #hero-introduction .container #section-one aside .get-started-button:hover,
 main #hero-introduction .container #section-one aside .login-button:hover,
 #loggedOutNavbar .container #navbarNavAltMarkup .navbar-nav .nav-log-in:hover,
 #loggedOutNavbar .container #navbarNavAltMarkup .navbar-nav .nav-get-started-btn:hover,
 #mainRegisterPage #registerForm #register-submit-btn:hover,
-#main-login .container #loginCard #login-section-two #login-form #login-form-submit-btn:hover{
-
+#main-login .container #loginCard #login-section-two #login-form #login-form-submit-btn:hover,
+#forgotPasswordMain .container #forgotPasswordForm #forgotPassword-submit-btn:hover{
     background-color: #0e8641;
     border: 1px solid #0e8641;
     transform: translateY(-2px);
@@ -72,10 +75,12 @@ main #hero-introduction .container #section-one aside .login-button:hover,
 /*Index*/
 /*Navbar*/
 /*Register Page - Submit Button*/
+/*ForgotPassword - Submit Button*/
 main #hero-introduction .container #section-one aside .login-button,
 #loggedOutNavbar .container #navbarNavAltMarkup .navbar-nav .nav-log-in,
 #mainRegisterPage #registerForm #register-submit-btn,
-#main-login .container #loginCard #login-section-two #login-form #login-form-submit-btn{
+#main-login .container #loginCard #login-section-two #login-form #login-form-submit-btn,
+#forgotPasswordMain .container #forgotPasswordForm #forgotPassword-submit-btn{
     background-color: #5b8ed5;
     border: 1px solid #5b8ed5;
 }
@@ -84,10 +89,12 @@ main #hero-introduction .container #section-one aside .login-button,
 /*Index*/
 /*Navbar*/
 /*Register Page - Submit Button*/
+/*ForgotPassword - Submit Button*/
 main #hero-introduction .container #section-one aside .login-button:hover,
 #loggedOutNavbar .container #navbarNavAltMarkup .navbar-nav .nav-log-in:hover,
 #mainRegisterPage #registerForm #register-submit-btn:hover,
-#main-login .container #loginCard #login-section-two #login-form #login-form-submit-btn:hover{
+#main-login .container #loginCard #login-section-two #login-form #login-form-submit-btn:hover,
+#forgotPasswordMain .container #forgotPasswordForm #forgotPassword-submit-btn:hover{
     background-color: rgba(100, 149, 237, 0.49);
     border: 1px solid rgba(100, 149, 237, 0.49);
 }
