--- a/src/main/resources/templates/SignUp/forgotPassword.html
+++ b/src/main/resources/templates/SignUp/forgotPassword.html
@@ -9,24 +9,26 @@
 
 
 <main id="forgotPasswordMain">
-    <form id="forgotPasswordForm" th:action="@{/forgot_password}" method="post">
-        <h1> Forgot Password</h1>
-        <div>
-            <div th:if="${error != null}">
-                <p class="text-danger">[[${error}]]</p>
-            </div>
-            <div th:if="${message != null}">
-                <p class="text-success">[[${message}]]</p>
-            </div>
+    <div class="container">
+        <form id="forgotPasswordForm" th:action="@{/forgot_password}" method="post">
+            <h1> Forgot Password</h1>
+            <div>
+                <div th:if="${error != null}">
+                    <p class="text-danger">[[${error}]]</p>
+                </div>
+                <div th:if="${message != null}">
+                    <p class="text-success">[[${message}]]</p>
+                </div>
 
-        </div>
-        <div class="my-3">
-            <label for="forgetPasswordInputEmail" class="form-label">Email address</label>
-            <input type="email" name="email" class="form-control" id="forgetPasswordInputEmail" aria-describedby="emailHelp">
-            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-        </div>
-        <button type="submit" class="btn" id="register-form-submit-btn">Submit</button>
-    </form>
+            </div>
+            <div class="my-3">
+                <label for="forgetPasswordInputEmail" class="form-label">Email address</label>
+                <input type="email" name="email" class="form-control" id="forgetPasswordInputEmail" aria-describedby="emailHelp">
+                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+            </div>
+            <button type="submit" class="btn" id="forgotPassword-submit-btn">Submit</button>
+        </form>
+    </div>
 </main>
 
 
