Welcome, Page, Refactored page, created a new style and deleted old one.

--- a/src/main/resources/static/css/aboutStylesheet.css
+++ b/src/main/resources/static/css/aboutStylesheet.css
@@ -55,7 +55,7 @@ main {
                         display: block;
                         width: 120px;
                         height: 1px;
-                        background: #ddd;
+                        background: #fff;
                         bottom: 1px;
                         left: calc(50% - 60px);
                     }
