--- a/src/main/resources/static/css/signinStylesheet.css
+++ b/src/main/resources/static/css/signinStylesheet.css
@@ -145,6 +145,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        /*Form*/
         #forgotPasswordForm{
 
         }
